--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "homepage": "https://github.com/iaw-2021/romivire-servicio-web#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.7",
     "pg": "^8.6.0"
   }
 }
