--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express": "^4.17.1",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6"
   }
 }
